--- a/restaurant.html
+++ b/restaurant.html
@@ -17,7 +17,7 @@
   <header class="home-header">
     <!-- Beginning nav -->
     <nav>
-      <h1><a href="/">Restaurant Reviews</a></h1>
+      <h1><a class="main-title" href="/">Restaurant Reviews</a></h1>
     </nav>
     <!-- Beginning breadcrumb -->
     <ul id="breadcrumb" >
