--- a/index.html
+++ b/index.html
@@ -22,24 +22,20 @@
   <main id="maincontent">
 
     <section id="map-container">
-      <div id="map"></div>
+      <div tabindex="-1" id="map" role="application"></div>
     </section>
 
     <section>
       <div class="filter-options">
         <h2>Filter Results</h2>
 
-        <label>
-          <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
+          <select aria-label="Neighborhoods" id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
             <option value="all">All Neighborhoods</option>
           </select>
-        </label>
-        
-        <label>
-          <select id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
+
+          <select aria-label="Cuisines" id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
             <option value="all">All Cuisines</option>
           </select>
-        </label>
       </div>
       <ul id="restaurants-list"></ul>
     </section>
